# sentio

./: Dockerfile.sentio  LICENSE.md  README.md  pyproject.toml
demo/: demo.sh
demos/1-demo_sql/: README.md  compose.yaml  demo.sh
demos/1-demo_sql/grafana/dashboards/json/: Sentio.json
demos/1-demo_sql/telegraf/: telegraf.conf
demos/2-demo_docker/: README.md  compose.yaml  demo_stop.sh  tunnel.sh  tunnel_stop.sh
demos/2-demo_docker/grafana/dashboards/json/: Sentio.json
demos/3-demo_real/: README.md
demos/3-demo_real/grafana/dashboards/json/: Sentio.json
demos/3-demo_real/prometheus/: prometheus.yaml
demos/3-demo_real/telegraf/: telegraf.conf
src/sentio/: __main__.py  api.py  prediction.py
